[package]
name = "wei-run"
version = "0.1.21"
edition = "2021"
description = "wei run"
documentation = "https://github.com/zuiyue-com/wei-run"
homepage = "https://github.com/zuiyue-com/wei-run"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.10"
wei-log = "0.2.5"
winapi = { version = "0.3", features = ["winbase","tlhelp32","handleapi","wincon","winuser"] }

[dependencies.procfs]
version = "0.15"
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"